# flowstate

./: '  Cargo.toml  LICENSE
application/: Cargo.toml
application/src/: lib.rs  main.rs
application/src/analytics/: mod.rs
application/src/config/: mod.rs
application/src/io/storage/: mod.rs  paths.rs
application/src/network/: mod.rs
application/src/peer/: mod.rs
application/src/storage/: mod.rs  paths.rs  storable.rs
application/src/tree/: error.rs  mod.rs  node.rs  projection.rs  sync.rs
application/src/trees/: error.rs  mod.rs  node.rs  sync.rs
clients/assets/icons/: inst.txt
clients/desktop/: Cargo.toml
clients/desktop-egui-depreciated/: Cargo.toml
clients/desktop-egui-depreciated/src/: appearance.rs  components.rs  icons.rs  main.rs
clients/desktop-egui-depreciated/src/stats/chart/: mod.rs
clients/desktop-egui-depreciated/src/tasks/: mod.rs
clients/desktop/src/: appearance.rs  components.rs  extensions.rs  icon.rs  icons.rs  main.rs  style.rs  theme.rs
clients/desktop/src/chart/: line2diff.rs  mod.rs
clients/desktop/src/config/: mod.rs
clients/desktop/src/content/: mod.rs
clients/desktop/src/content/history/: mod.rs
clients/desktop/src/content/stats/: mod.rs
clients/desktop/src/content/tasks/: mod.rs
clients/desktop/src/stats/: mod.rs
clients/desktop/src/stats/chart/: line2diff.rs  mod.rs
clients/desktop/src/style/: border.rs  button.rs  colors.rs  mod.rs
clients/desktop/src/tasks/: mod.rs  tree.rs
clients/desktop/src/tree/: mod.rs
clients/desktop/src/widgets/: border.rs  mod.rs  split.rs
domain/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
utils/src/: lib.rs
