[workspace]
members = [
	"domain",
	"server",
	"application",
	"clients/desktop",
]
resolver = "2"

[workspace.dependencies]
domain = { path = "domain" }

tokio         = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29.0"

serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

automerge = "0.9.0"
