[workspace]
members = [
	"utils",
	"server",
	"application",
	"clients/desktop", 
]
resolver = "2"

[workspace.dependencies]
utils = { path = "utils" }
application = { path = "application" }

tokio         = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

automerge = "0.9.0"
