[package]
name = "application"
version = "0.1.3"
edition = "2024"

[dependencies]
utils.workspace = true

tokio.workspace = true
tokio-scoped.workspace = true 
tokio-tungstenite.workspace = true
futures-util.workspace = true

serde.workspace = true
serde_json.workspace = true

automerge.workspace = true 

rustc-hash = "2.1.2"

dirs = "6.0.0"
