[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true }

tokio         = { workspace = true } 
tokio-tungstenite = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }

automerge = { workspace = true }

axum = "0.8.9"
futures-util = "0.3.32"
