[package]
name = "desktop"
version = "0.1.1"
edition = "2024"

[dependencies]
utils.workspace = true
application.workspace = true

automerge = { workspace = true }

tokio.workspace = true

egui = "0.34.2"
eframe = { version = "0.34.2", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
] }
egui_extras = { version = "0.34.2", features = ["svg"] }
egui_plot = "0.35.0"
