[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
utils.workspace = true
application.workspace = true

iced = { version = "0.14.0", features = ["advanced", "canvas", "wgpu"] }
# HACK: Allows for compilation of iced in release mode, remove if iced crate fixes its renderer logic
iced_renderer = { version = "0.13.0", features = ["wgpu"] }
