[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
utils.workspace = true
application.workspace = true

automerge.workspace = true

# TODO: Remove canvas and implement graphs better way
iced = { version = "0.14.0", features = ["canvas", "advanced", "svg"] }
iced-resizable-split = "1.0.1"

